--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,7 +33,7 @@ services:
 
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
-  App\ApiClient:
+  App\Service\ApiClient:
     arguments:
       $url: '%api.address%'
       $port: '%api.port%'
